# Elysia

./: .dockerignore  .env.aura.example  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint  ARCHITECTURE_SUMMARY.md  AUR-CRAWLER-CONN-001.patch  AURORA_DEV_HELPER_INSTRUCTIONS.md  AUTH_README.md  CHANGELOG.md  CODEOWNERS  COPILOT_AGENTE_CONSTITUCION.md  DASHBOARD_README.md  DEEPDIVE_SCRAPER_README.md  Dockerfile  GITHUB_COPILOT_INSTRUCTIONS.md  MIGRATION_COMPLETE.md  Makefile  Makefile.kafka  PR_BODY_CI_HOUSEKEEPING.md  QDRANT_HEALTH_IMPLEMENTATION.md  README.md  README_PILARES.md  RELATORIO_360_AURORA_2025.md  RELATORIO_360_COMPLETO_2025.md  RELATORIO_ANALISE_360_AURORA_PLATAFORM.md  RELATORIO_ANALISE_TECNICA_DETALHADA.md  RELATORIO_STATUS_AURORA.md  STATUS_REPORT.md  _backup_automacoes_220725.txt  _backup_limpeza_automacoes_220725.txt  alembic.ini  approved_packages.json  arquitetura.md  audit_architecture.py  benchmarking_suite.json  dashboard.py  detect_output.txt  (+53 more)
aurora-core/: .dockerignore  .env.example  ARCHITECTURE_SUMMARY.md  AURORA_DEV_HELPER_INSTRUCTIONS.md  AUTH_README.md  DASHBOARD_README.md  DEEPDIVE_SCRAPER_README.md  Dockerfile  MIGRATION_COMPLETE.md  Makefile  alembic.ini  approved_packages.json  benchmarking_suite.json  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  etp_gerado.txt  mentor_vendas_train.jsonl  pyproject.toml  pytest.ini  scraped_redelog.json  start_chroma.py  test_redelog_rag.py  update_knowledge_base.py
aurora-core/.devcontainer/: devcontainer.json
aurora-core/.github/workflows/: ci.yml
aurora-core/alembic/: env.py
aurora-core/alembic/versions/: 49d19e6c95b6_initial_tables.py  d5a0df4808cf_add_etp_models.py
aurora-core/chromadb/: Dockerfile
aurora-core/config/: .secrets.example.toml  settings.example.toml
aurora-core/data/crawled/: crawled_1324681e_13.md  crawled_f5737502_3.md
aurora-core/data/projetos/test_project/youtube/os_test_001/: transcript_0tnjqwBiWik.txt  transcript_1B1KHOeEpAQ.txt  transcript_3s4O-IJP16s.txt  transcript_6C7XqfR2Qek.txt  transcript_8TgIEzyIgmA.txt  transcript_95P8eGRAeGg.txt  transcript_9bSzZ-9eUkM.txt  transcript_EKGypMLzD3M.txt  transcript_EuOLYZCQ8RE.txt  transcript_LZoLvV7p25A.txt  transcript_ODzB91DWYPg.txt  transcript_ObX84gnxdHM.txt  transcript_Xr-IWF4GIiU.txt  transcript_YLVvZDip27s.txt  transcript_ZqlpCliftQg.txt  transcript_aMJUnOeOs2k.txt  transcript_fnBNIZPkInc.txt  transcript_iXZ8xZeKKng.txt  transcript_maxMAHJZ0tg.txt  transcript_o1BqdXblTeo.txt  transcript_vCUZxWFz1nA.txt  transcript_x4ZYrtpndvM.txt  transcript_zzhEz8jkM1s.txt  video_urls.txt
aurora-core/docs/: AURORA_COPILOT_GUIDE.md  PULL_REQUEST_CHECKLIST.md  STRUCTURE.md
aurora-core/frontend/: README.md  next.config.js  test-api.js
aurora-core/knowledge-base/errors/: error-YYYYMMDD-HHMM-exemplo.md
aurora-core/knowledge-base/technologies/: nestjs.md
aurora-core/legacy_docs/: CI_OVERVIEW.md  CONVENTIONAL_COMMITS_EXAMPLES.md  COPILOT_AGENT_CONSTITUTION.md
aurora-core/scripts/: check_auth.py  dashboard.py  ingest_doc.py  ingest_youtube.py  list_models.py  project_manager.py  retrieve_knowledge.py  run_dashboard.py  test_azure_openai.py  test_gcp_access.py
aurora-core/services/: rag_rest.py
aurora-core/src/aurora_platform/: main.py
aurora-core/src/aurora_platform/api/: health_router.py
aurora-core/src/aurora_platform/api/routers/: etp_router.py  knowledge_router.py
aurora-core/src/aurora_platform/api/v1/: api.py  etp_router.py
aurora-core/src/aurora_platform/api/v1/endpoints/: __init__.py  browser_router.py  debug_router.py  etp_router.py  profiling_router.py  youtube_pipeline_router.py
aurora-core/src/aurora_platform/api/v1/hub/: router.py  rule_based_router.py
aurora-core/src/aurora_platform/clients/adapters/: chroma_adapter.py
aurora-core/src/aurora_platform/clients/factories/: llm_factory.py
aurora-core/src/aurora_platform/core/: __init__.py  config.py  db.py  jwt_blacklist.py  security.py  settings.py
aurora-core/src/aurora_platform/intelligence/: llm_interface.py  vector_store.py
aurora-core/src/aurora_platform/modules/crawler/: pipeline.py
aurora-core/src/aurora_platform/modules/crawler/chunking/: splitter.py
aurora-core/src/aurora_platform/modules/crawler/ingestion/: loaders.py  (+2 more)
aurora-core/src/aurora_platform/modules/rag/: pipeline.py
aurora-core/src/aurora_platform/routers/: cliente_router.py  system_router.py
aurora-core/src/aurora_platform/schemas/: harmony_schema.py
aurora-core/src/aurora_platform/services/: adapter_factory.py  agent_profiling_service.py  audio_transcription_service.py  cliente_service.py  etp_generator_service.py  etp_service.py  knowledge_service.py  knowledge_service.pyi  openai_service.py  youtube_transcript_extraction_service.py
aurora-core/tests/: conftest.py  test_auth.py  test_config.py  test_database.py  test_security.py  test_youtube_transcript_extraction_service.py
aurora-core/tests/integration/: test_rate_limiting.py
aurora-core/tests/rag/: test_api.py  test_bm25.py  test_hybrid.py
aurora-core/tests/unit/: test_gemini_adapter.py  test_llm_phi3_adapter.py
encoding_backups/aurora-core/: pyproject.toml
encoding_backups/aurora-core/data/crawled/: crawled_f80b2fc6_9.md
encoding_backups/aurora-core/frontend/: package-lock.json
encoding_backups/aurora-core/scripts/: scripts_requirements.txt
encoding_backups/aurora-core/src/aurora_platform/api/: debug_router.py
encoding_backups/aurora-core/src/aurora_platform/core/: two_factor.py
encoding_backups/aurora-core/src/aurora_platform/db/: database.py
encoding_backups/aurora-core/src/aurora_platform/services/: __init__.py
encoding_backups/aurora-core/tests/: test_database.py  test_models.py  test_youtube_transcript_extraction.py
encoding_backups/aurora-core/tests/integration/: test_ingestion_api.py
encoding_backups/aurora-core/tests/integration/browser_automation/: test_playwright_compatibility.py
encoding_backups/aurora-core/tests/modules/rag/: __init__.py
encoding_backups/aurora-core/tests/unit/: test_gemini_adapter.py  test_llm_phi3_adapter.py
(+700 files in other folders)
