[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aurora-platform"
version = "0.1.0"
description = "Aurora Platform (núcleo canônico)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Projeto Aurora" }]
dependencies = [
	"SQLAlchemy>=2.0",
	"kafka-python",
	"neo4j",
	"requests",
	# adicione aqui as dependências reais do núcleo (FastAPI, pydantic, etc.)
]

[project.optional-dependencies]
dev = [
	"pytest",
	"pytest-cov",
	"ruff",
	"pyright",
	"pre-commit",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E","F","I","UP","B","SIM","C4"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pyright]
include = ["src/aurora_platform"]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
