[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "aurora-core"
version = "0.1.0"
description = "Aurora-Core: O Kernel do Sistema Operacional de IA (AIOS) Aurora"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Equipe Aurora", email = "dev@aurora.ai" }]
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi>=0.110.0,<0.111.0",
    "sqlmodel>=0.0.16,<0.0.17",
    "alembic>=1.13.1,<2.0.0",
    "uvicorn>=0.29.0,<0.30.0",
    "chromadb==0.4.15",
    "pydantic>=2.0.0,<3.0.0",
    "dynaconf>=3.2.4,<4.0.0",
    "passlib>=1.7.4,<2.0.0",
    "python-jose>=3.3.0,<4.0.0",
    "httpx>=0.27.0,<0.28.0",
    "beautifulsoup4>=4.12.3,<5.0.0",
    "undetected-chromedriver>=3.5.5,<4.0.0",
    "pybreaker>=1.1.0,<2.0.0",
    "tenacity>=8.2.3,<9.0.0",
    "async-lru>=2.0.4,<3.0.0",
    "sentry-sdk[fastapi]>=2.6.0,<3.0.0",
    "slowapi>=0.1.9,<0.2.0",
    "pydantic-settings>=2.10.1,<3.0.0", # <-- SINTAXE CORRIGIDA
    "firebase_admin==6.2.0"
]



[tool.poetry.group.dev.dependencies]
pytest = ">=8.2.0,<9.0.0"
pytest-asyncio = ">=0.23.6,<0.24.0"
black = ">=24.4.2,<25.0.0"
ruff = ">=0.4.3,<0.5.0"
pre-commit = ">=3.7.0,<4.0.0"
httpx = { version = ">=0.27.0,<0.28.0", extras = ["http2"] }
isort = ">=5.13.2,<6.0.0"

[tool.poetry]
packages = [{ include = "aurora_platform", from = "src" }]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
